// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
"<button
  class=\\"button\\"
  onclick={[Function actionHandler]}
>
  <span
    role=\\"img\\"
    aria-label=\\"so cool\\"
  >
    😀 😎 👍 💯
  </span>
</button>"
`;

exports[`Storyshots Button with text 1`] = `
"<button
  class=\\"button\\"
  onclick={[Function actionHandler]}
>
  Hello Button
</button>"
`;
